# jot

./: README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/lib/: conf.rs  setup.rs
src/assets/styles/: fonts.css  main.css  theme.css
src/modules/: app.js  dictionary.js  events.js  find.js  go.js  helper.js  insert.js  navi.js  operator.js  page.js  project.js  reader.js  splash.js  stat.js  status.js  toolbar.js
src/modules/lib/: controller.js  editor.js  texthighlighter.js  theme.js  toolbar-editor.js  toolbar-formats.js  vim.js
